Fix: CSS: If screen is too small (mobile), then buttons on down panel are extended to see full icon

--- a/zip/main.css
+++ b/zip/main.css
@@ -392,6 +392,11 @@ ul:has(li input[type="checkbox"]) {
   font-size: calc(1em * 1.5);
 }
 
+.too-wide .toolbar-down > * {
+  box-sizing: unset;
+  padding: 15px 10px;
+}
+
 .inGray {
   filter: grayscale(100%);
 }
